# local-dns

./: ADMIN_GUIDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml
docs/: index.md
src/: main.rs  telemetry.rs
